# Real-Time-Edge-Detection

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/suprith/realtimeedgedetectionviewer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/suprith/realtimeedgedetectionviewer/: EdgeRenderer.kt  FrameWebSocketServer.kt  ImageUtils.kt  MainActivity.kt  NativeLib.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/suprith/realtimeedgedetectionviewer/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  package-lock.json  package.json  sample_processed_base64.txt
web/src/: index.ts  server.ts
